<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="60sp"
        android:paddingVertical="30dp"
        android:textColor="@color/red"
        android:gravity="center"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hamburger3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/hamburger"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/qtd_hamburger"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:hint="@string/quantidade"
            android:inputType="number"
            android:gravity="center"
            android:text="0"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cheeseburger" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/cheeseburger"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/qtd_cheeseburger"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginLeft="25dp"
            android:gravity="center"
            android:text="0"
            android:minHeight="48dp"
            android:hint="@string/quantidade"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/frenchfries" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/fries"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/qtd_batatas"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginLeft="25dp"
            android:gravity="center"
            android:text="0"
            android:minHeight="48dp"
            android:hint="@string/quantidade"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bottle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/soda"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/qtd_refrigerantes"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="0"
            android:minHeight="48dp"
            android:hint="@string/quantidade"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/milkshake" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/milkshake"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/qtd_milkshake"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginLeft="60dp"
            android:gravity="center"
            android:text="0"
            android:minHeight="48dp"
            android:hint="@string/quantidade"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/botao_subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_total"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/botao_submeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/botao_submeter"
            android:textSize="20sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/mostrar_subtotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/ementa"
        android:textSize="60sp"
        android:textColor="@color/red"
        android:gravity="center"
        android:background="@color/black" />

</LinearLayout>